secrets-manager-usage/tests/fails/build_enum.stderr
error: Invalid input received. Expected an empty struct
 --> tests/fails/build_enum.rs:4:1
  |
4 | pub enum DoesNotWorkForEnum {}
  | ^^^
